supported_grammars/lbnf/lbnfParser.g4
// -*- Java -*- This ANTLRv4 file was machine-generated by BNFC
parser grammar lbnfParser;

options
{
    tokenVocab = lbnfLexer;
    contextSuperClass=LanguageServer.AttributedParseTreeNode;
}

start_LGrammar : lGrammar EOF ;
start_LDef : lDef EOF ;
start_ListLDef : listLDef EOF ;
start_ListIdentifier : listIdentifier EOF ;
start_Grammar : grammar_ EOF ;
start_ListDef : listDef EOF ;
start_Def : def EOF ;
start_Item : item EOF ;
start_ListItem : listItem EOF ;
start_Cat : cat EOF ;
start_Label : label EOF ;
start_LabelId : labelId EOF ;
start_ProfItem : profItem EOF ;
start_IntList : intList EOF ;
start_ListInteger : listInteger EOF ;
start_ListIntList : listIntList EOF ;
start_ListProfItem : listProfItem EOF ;
start_Arg : arg EOF ;
start_ListArg : listArg EOF ;
start_Separation : separation EOF ;
start_ListString : listString EOF ;
start_Exp : exp EOF ;
start_Exp1 : exp1 EOF ;
start_Exp2 : exp2 EOF ;
start_ListExp : listExp EOF ;
start_ListExp2 : listExp2 EOF ;
start_RHS : rHS EOF ;
start_ListRHS : listRHS EOF ;
start_MinimumSize : minimumSize EOF ;
start_Reg : reg EOF ;
start_Reg1 : reg1 EOF ;
start_Reg2 : reg2 EOF ;
start_Reg3 : reg3 EOF ;
lGrammar : listLDef ;
lDef : def | listIdentifier Surrogate_id_SYMB_0 def | Surrogate_id_SYMB_39 listIdentifier ;
listLDef : | lDef | lDef Surrogate_id_SYMB_1 listLDef | Surrogate_id_SYMB_1 listLDef ;
listIdentifier : Identifier | Identifier Surrogate_id_SYMB_2 listIdentifier ;
grammar_ : listDef ;
listDef : | def | def Surrogate_id_SYMB_1 listDef | Surrogate_id_SYMB_1 listDef ;
def : label Surrogate_id_SYMB_3 cat Surrogate_id_SYMB_4 listItem | Surrogate_id_SYMB_20 STRING | Surrogate_id_SYMB_20 STRING STRING | Surrogate_id_SYMB_26 label Surrogate_id_SYMB_3 cat Surrogate_id_SYMB_4 listItem | Surrogate_id_SYMB_36 Identifier reg | Surrogate_id_SYMB_31 Surrogate_id_SYMB_36 Identifier reg | Surrogate_id_SYMB_24 listIdentifier | Surrogate_id_SYMB_33 minimumSize cat STRING | Surrogate_id_SYMB_35 minimumSize cat STRING | Surrogate_id_SYMB_22 cat STRING STRING separation minimumSize | Surrogate_id_SYMB_19 Identifier INTEGER | Surrogate_id_SYMB_32 Identifier Surrogate_id_SYMB_4 listRHS | Surrogate_id_SYMB_21 Identifier listArg Surrogate_id_SYMB_10 exp | Surrogate_id_SYMB_27 listString | Surrogate_id_SYMB_27 Surrogate_id_SYMB_34 listString | Surrogate_id_SYMB_27 Surrogate_id_SYMB_37 ;
item : STRING | cat ;
listItem : | listItem item ;
cat : Surrogate_id_SYMB_5 cat Surrogate_id_SYMB_6 | Identifier ;
label : labelId | labelId listProfItem | labelId labelId listProfItem | labelId labelId ;
labelId : Identifier | Surrogate_id_SYMB_7 | Surrogate_id_SYMB_5 Surrogate_id_SYMB_6 | Surrogate_id_SYMB_8 Surrogate_id_SYMB_0 Surrogate_id_SYMB_9 | Surrogate_id_SYMB_8 Surrogate_id_SYMB_0 Surrogate_id_SYMB_5 Surrogate_id_SYMB_6 Surrogate_id_SYMB_9 ;
profItem : Surrogate_id_SYMB_8 Surrogate_id_SYMB_5 listIntList Surrogate_id_SYMB_6 Surrogate_id_SYMB_2 Surrogate_id_SYMB_5 listInteger Surrogate_id_SYMB_6 Surrogate_id_SYMB_9 ;
intList : Surrogate_id_SYMB_5 listInteger Surrogate_id_SYMB_6 ;
listInteger : | INTEGER | INTEGER Surrogate_id_SYMB_2 listInteger ;
listIntList : | intList | intList Surrogate_id_SYMB_2 listIntList ;
listProfItem : profItem | profItem listProfItem ;
arg : Identifier ;
listArg : | listArg arg ;
separation : | Surrogate_id_SYMB_35 STRING | Surrogate_id_SYMB_33 STRING ;
listString : STRING | STRING Surrogate_id_SYMB_2 listString ;
exp : exp1 Surrogate_id_SYMB_0 exp | exp1 ;
exp1 : Identifier listExp2 | exp2 ;
exp2 : Identifier | INTEGER | CHAR | STRING | DOUBLE | Surrogate_id_SYMB_5 listExp Surrogate_id_SYMB_6 | Surrogate_id_SYMB_8 exp Surrogate_id_SYMB_9 ;
listExp : | exp | exp Surrogate_id_SYMB_2 listExp ;
listExp2 : exp2 | exp2 listExp2 ;
rHS : listItem ;
listRHS : rHS | rHS Surrogate_id_SYMB_11 listRHS ;
minimumSize : Surrogate_id_SYMB_30 | ;
reg : reg Surrogate_id_SYMB_11 reg1 | reg1 ;
reg1 : reg1 Surrogate_id_SYMB_12 reg2 | reg2 ;
reg2 : reg2 reg3 | reg3 ;
reg3 : reg3 Surrogate_id_SYMB_13 | reg3 Surrogate_id_SYMB_14 | reg3 Surrogate_id_SYMB_15 | Surrogate_id_SYMB_25 | CHAR | Surrogate_id_SYMB_5 STRING Surrogate_id_SYMB_6 | Surrogate_id_SYMB_16 STRING Surrogate_id_SYMB_17 | Surrogate_id_SYMB_23 | Surrogate_id_SYMB_28 | Surrogate_id_SYMB_38 | Surrogate_id_SYMB_29 | Surrogate_id_SYMB_18 | Surrogate_id_SYMB_8 reg Surrogate_id_SYMB_9 ;
