LanguageServer/lbnfParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from lbnfParser.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace LanguageServer {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class lbnfParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Surrogate_id_SYMB_0=1, Surrogate_id_SYMB_1=2, Surrogate_id_SYMB_2=3, Surrogate_id_SYMB_3=4, 
		Surrogate_id_SYMB_4=5, Surrogate_id_SYMB_5=6, Surrogate_id_SYMB_6=7, Surrogate_id_SYMB_7=8, 
		Surrogate_id_SYMB_8=9, Surrogate_id_SYMB_9=10, Surrogate_id_SYMB_10=11, 
		Surrogate_id_SYMB_11=12, Surrogate_id_SYMB_12=13, Surrogate_id_SYMB_13=14, 
		Surrogate_id_SYMB_14=15, Surrogate_id_SYMB_15=16, Surrogate_id_SYMB_16=17, 
		Surrogate_id_SYMB_17=18, Surrogate_id_SYMB_18=19, Surrogate_id_SYMB_19=20, 
		Surrogate_id_SYMB_20=21, Surrogate_id_SYMB_21=22, Surrogate_id_SYMB_22=23, 
		Surrogate_id_SYMB_23=24, Surrogate_id_SYMB_24=25, Surrogate_id_SYMB_25=26, 
		Surrogate_id_SYMB_26=27, Surrogate_id_SYMB_27=28, Surrogate_id_SYMB_28=29, 
		Surrogate_id_SYMB_29=30, Surrogate_id_SYMB_30=31, Surrogate_id_SYMB_31=32, 
		Surrogate_id_SYMB_32=33, Surrogate_id_SYMB_33=34, Surrogate_id_SYMB_34=35, 
		Surrogate_id_SYMB_35=36, Surrogate_id_SYMB_36=37, Surrogate_id_SYMB_37=38, 
		Surrogate_id_SYMB_38=39, Surrogate_id_SYMB_39=40, COMMENT_antlr_builtin=41, 
		MULTICOMMENT_antlr_builtin=42, Identifier=43, DOUBLE=44, INTEGER=45, WS=46, 
		ErrorToken=47, STRING=48, CHAR=49, STRINGESC=50;
	public const int
		RULE_start_LGrammar = 0, RULE_start_LDef = 1, RULE_start_ListLDef = 2, 
		RULE_start_ListIdentifier = 3, RULE_start_Grammar = 4, RULE_start_ListDef = 5, 
		RULE_start_Def = 6, RULE_start_Item = 7, RULE_start_ListItem = 8, RULE_start_Cat = 9, 
		RULE_start_Label = 10, RULE_start_LabelId = 11, RULE_start_ProfItem = 12, 
		RULE_start_IntList = 13, RULE_start_ListInteger = 14, RULE_start_ListIntList = 15, 
		RULE_start_ListProfItem = 16, RULE_start_Arg = 17, RULE_start_ListArg = 18, 
		RULE_start_Separation = 19, RULE_start_ListString = 20, RULE_start_Exp = 21, 
		RULE_start_Exp1 = 22, RULE_start_Exp2 = 23, RULE_start_ListExp = 24, RULE_start_ListExp2 = 25, 
		RULE_start_RHS = 26, RULE_start_ListRHS = 27, RULE_start_MinimumSize = 28, 
		RULE_start_Reg = 29, RULE_start_Reg1 = 30, RULE_start_Reg2 = 31, RULE_start_Reg3 = 32, 
		RULE_lGrammar = 33, RULE_lDef = 34, RULE_listLDef = 35, RULE_listIdentifier = 36, 
		RULE_grammar_ = 37, RULE_listDef = 38, RULE_def = 39, RULE_item = 40, 
		RULE_listItem = 41, RULE_cat = 42, RULE_label = 43, RULE_labelId = 44, 
		RULE_profItem = 45, RULE_intList = 46, RULE_listInteger = 47, RULE_listIntList = 48, 
		RULE_listProfItem = 49, RULE_arg = 50, RULE_listArg = 51, RULE_separation = 52, 
		RULE_listString = 53, RULE_exp = 54, RULE_exp1 = 55, RULE_exp2 = 56, RULE_listExp = 57, 
		RULE_listExp2 = 58, RULE_rHS = 59, RULE_listRHS = 60, RULE_minimumSize = 61, 
		RULE_reg = 62, RULE_reg1 = 63, RULE_reg2 = 64, RULE_reg3 = 65;
	public static readonly string[] ruleNames = {
		"start_LGrammar", "start_LDef", "start_ListLDef", "start_ListIdentifier", 
		"start_Grammar", "start_ListDef", "start_Def", "start_Item", "start_ListItem", 
		"start_Cat", "start_Label", "start_LabelId", "start_ProfItem", "start_IntList", 
		"start_ListInteger", "start_ListIntList", "start_ListProfItem", "start_Arg", 
		"start_ListArg", "start_Separation", "start_ListString", "start_Exp", 
		"start_Exp1", "start_Exp2", "start_ListExp", "start_ListExp2", "start_RHS", 
		"start_ListRHS", "start_MinimumSize", "start_Reg", "start_Reg1", "start_Reg2", 
		"start_Reg3", "lGrammar", "lDef", "listLDef", "listIdentifier", "grammar_", 
		"listDef", "def", "item", "listItem", "cat", "label", "labelId", "profItem", 
		"intList", "listInteger", "listIntList", "listProfItem", "arg", "listArg", 
		"separation", "listString", "exp", "exp1", "exp2", "listExp", "listExp2", 
		"rHS", "listRHS", "minimumSize", "reg", "reg1", "reg2", "reg3"
	};

	private static readonly string[] _LiteralNames = {
		null, "':'", "';'", "','", "'.'", "'::='", "'['", "']'", "'_'", "'('", 
		"')'", "'='", "'|'", "'-'", "'*'", "'+'", "'?'", "'{'", "'}'", "'char'", 
		"'coercions'", "'comment'", "'define'", "'delimiters'", "'digit'", "'entrypoints'", 
		"'eps'", "'internal'", "'layout'", "'letter'", "'lower'", "'nonempty'", 
		"'position'", "'rules'", "'separator'", "'stop'", "'terminator'", "'token'", 
		"'toplevel'", "'upper'", "'views'", null, null, null, null, null, null, 
		null, "'\"'", "'''", "'\\'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Surrogate_id_SYMB_0", "Surrogate_id_SYMB_1", "Surrogate_id_SYMB_2", 
		"Surrogate_id_SYMB_3", "Surrogate_id_SYMB_4", "Surrogate_id_SYMB_5", "Surrogate_id_SYMB_6", 
		"Surrogate_id_SYMB_7", "Surrogate_id_SYMB_8", "Surrogate_id_SYMB_9", "Surrogate_id_SYMB_10", 
		"Surrogate_id_SYMB_11", "Surrogate_id_SYMB_12", "Surrogate_id_SYMB_13", 
		"Surrogate_id_SYMB_14", "Surrogate_id_SYMB_15", "Surrogate_id_SYMB_16", 
		"Surrogate_id_SYMB_17", "Surrogate_id_SYMB_18", "Surrogate_id_SYMB_19", 
		"Surrogate_id_SYMB_20", "Surrogate_id_SYMB_21", "Surrogate_id_SYMB_22", 
		"Surrogate_id_SYMB_23", "Surrogate_id_SYMB_24", "Surrogate_id_SYMB_25", 
		"Surrogate_id_SYMB_26", "Surrogate_id_SYMB_27", "Surrogate_id_SYMB_28", 
		"Surrogate_id_SYMB_29", "Surrogate_id_SYMB_30", "Surrogate_id_SYMB_31", 
		"Surrogate_id_SYMB_32", "Surrogate_id_SYMB_33", "Surrogate_id_SYMB_34", 
		"Surrogate_id_SYMB_35", "Surrogate_id_SYMB_36", "Surrogate_id_SYMB_37", 
		"Surrogate_id_SYMB_38", "Surrogate_id_SYMB_39", "COMMENT_antlr_builtin", 
		"MULTICOMMENT_antlr_builtin", "Identifier", "DOUBLE", "INTEGER", "WS", 
		"ErrorToken", "STRING", "CHAR", "STRINGESC"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "lbnfParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static lbnfParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public lbnfParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public lbnfParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Start_LGrammarContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public LGrammarContext lGrammar() {
			return GetRuleContext<LGrammarContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_LGrammarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_LGrammar; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_LGrammar(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_LGrammar(this);
		}
	}

	[RuleVersion(0)]
	public Start_LGrammarContext start_LGrammar() {
		Start_LGrammarContext _localctx = new Start_LGrammarContext(Context, State);
		EnterRule(_localctx, 0, RULE_start_LGrammar);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132;
			lGrammar();
			State = 133;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_LDefContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public LDefContext lDef() {
			return GetRuleContext<LDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_LDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_LDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_LDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_LDef(this);
		}
	}

	[RuleVersion(0)]
	public Start_LDefContext start_LDef() {
		Start_LDefContext _localctx = new Start_LDefContext(Context, State);
		EnterRule(_localctx, 2, RULE_start_LDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135;
			lDef();
			State = 136;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_ListLDefContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public ListLDefContext listLDef() {
			return GetRuleContext<ListLDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_ListLDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_ListLDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_ListLDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_ListLDef(this);
		}
	}

	[RuleVersion(0)]
	public Start_ListLDefContext start_ListLDef() {
		Start_ListLDefContext _localctx = new Start_ListLDefContext(Context, State);
		EnterRule(_localctx, 4, RULE_start_ListLDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138;
			listLDef();
			State = 139;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_ListIdentifierContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public ListIdentifierContext listIdentifier() {
			return GetRuleContext<ListIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_ListIdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_ListIdentifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_ListIdentifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_ListIdentifier(this);
		}
	}

	[RuleVersion(0)]
	public Start_ListIdentifierContext start_ListIdentifier() {
		Start_ListIdentifierContext _localctx = new Start_ListIdentifierContext(Context, State);
		EnterRule(_localctx, 6, RULE_start_ListIdentifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			listIdentifier();
			State = 142;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_GrammarContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public Grammar_Context grammar_() {
			return GetRuleContext<Grammar_Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_GrammarContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_Grammar; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_Grammar(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_Grammar(this);
		}
	}

	[RuleVersion(0)]
	public Start_GrammarContext start_Grammar() {
		Start_GrammarContext _localctx = new Start_GrammarContext(Context, State);
		EnterRule(_localctx, 8, RULE_start_Grammar);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144;
			grammar_();
			State = 145;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_ListDefContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public ListDefContext listDef() {
			return GetRuleContext<ListDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_ListDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_ListDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_ListDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_ListDef(this);
		}
	}

	[RuleVersion(0)]
	public Start_ListDefContext start_ListDef() {
		Start_ListDefContext _localctx = new Start_ListDefContext(Context, State);
		EnterRule(_localctx, 10, RULE_start_ListDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 147;
			listDef();
			State = 148;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_DefContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public DefContext def() {
			return GetRuleContext<DefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_DefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_Def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_Def(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_Def(this);
		}
	}

	[RuleVersion(0)]
	public Start_DefContext start_Def() {
		Start_DefContext _localctx = new Start_DefContext(Context, State);
		EnterRule(_localctx, 12, RULE_start_Def);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150;
			def();
			State = 151;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_ItemContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public ItemContext item() {
			return GetRuleContext<ItemContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_ItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_Item; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_Item(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_Item(this);
		}
	}

	[RuleVersion(0)]
	public Start_ItemContext start_Item() {
		Start_ItemContext _localctx = new Start_ItemContext(Context, State);
		EnterRule(_localctx, 14, RULE_start_Item);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153;
			item();
			State = 154;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_ListItemContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public ListItemContext listItem() {
			return GetRuleContext<ListItemContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_ListItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_ListItem; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_ListItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_ListItem(this);
		}
	}

	[RuleVersion(0)]
	public Start_ListItemContext start_ListItem() {
		Start_ListItemContext _localctx = new Start_ListItemContext(Context, State);
		EnterRule(_localctx, 16, RULE_start_ListItem);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 156;
			listItem(0);
			State = 157;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_CatContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public CatContext cat() {
			return GetRuleContext<CatContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_CatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_Cat; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_Cat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_Cat(this);
		}
	}

	[RuleVersion(0)]
	public Start_CatContext start_Cat() {
		Start_CatContext _localctx = new Start_CatContext(Context, State);
		EnterRule(_localctx, 18, RULE_start_Cat);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 159;
			cat();
			State = 160;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_LabelContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_Label; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_Label(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_Label(this);
		}
	}

	[RuleVersion(0)]
	public Start_LabelContext start_Label() {
		Start_LabelContext _localctx = new Start_LabelContext(Context, State);
		EnterRule(_localctx, 20, RULE_start_Label);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 162;
			label();
			State = 163;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Start_LabelIdContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public LabelIdContext labelId() {
			return GetRuleContext<LabelIdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(lbnfParser.Eof, 0); }
		public Start_LabelIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_LabelId; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.EnterStart_LabelId(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IlbnfParserListener typedListener = listener as IlbnfParserListener;
			if (typedListener != null) typedListener.ExitStart_LabelId(this);
		}
	}
